# commit-msg-check

./: .gitignore  .pre-commit-hooks.yaml  README.md  check_message.py  setup.cfg
