[metadata]
name = commit-msg-check
version = 0.1.0
author = Alban King
description = A pre-commit (commit-msg) hook to enforce the first n commits on a branch match a pattern
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
install_requires =
    GitPython==3.1

[options.entry_points]
console_scripts =
    check-message = check_message:main
